<resources>
    <string name="app_name">Livraison</string>
    <string name="email">Email</string>
    <string name="login">Connexion</string>
    <string name="password">Mot de passe</string>
    <string name="register">Inscription</string>
    <string name="logout">Deconnexion</string>
    <string name="phoneNumber">Numéro</string>
    <string name="role_hint">Role</string>
    <string name="select_role">Select Role</string>
    <string name="truck_number_hint">Immatriculation</string>
    <string name="welcome">Bienvenue</string>
    <string name="pls">Connectez ou inscrivez vous</string>
    <string name="save">Sauvegarder</string>
    <string name="editProfile">Modifier vos données utilisateur</string>
    <string name="adress">Adresse</string>
    <string name="setData">Profil</string>
    <string name="setLivraison">Set Livraison</string>
    <string name="manageDelivery">Manage Delivery</string>
    <string name="nomProduct">Nom du produit :</string>
    <string name="quantityProduct">Quantité(kg) :</string>
    <string name="setUpAddress">Please Enter the delivery address</string>
    <string name="deliverAddress">Addresse de livraison</string>
    <string name="deliverDate">Date de livraison</string>
    <string name="setUpDeliveryData">Modifier les données de livraison</string>
    <string name="userEmail">User Email:</string>
    <string name="DeliveryAdress">Addresse de livraison:</string>
    <string name="deliveryDate">Date de livraison:</string>
    <string name="submitDelivery">Valider</string>
    <string name="back">Retour</string>
    <string name="validateOrder">Commander</string>
    <string name="addTobasket">Add To Basket</string>
    <string name="selectAnOption">Bonjour ! Selectionner une option</string>
    <string name="seeOnGoingDelivery">Livraison En cours</string>
    <string name="seeWaitingDelivery">Livraison En attente</string>
    <string name="validateDelivery">Accepter</string>
    <string name="refuseDelivery">Refuser</string>
    <string name="submitOrder">Submit Order</string>
    <string name="confirm">Confirm</string>
    <string name="viewDeliveryItineraire">Voir l\'itinéraire</string>
    <string name="seeHistoryDelivery">Historique des livraisons</string>
    <string name="clearDelivery">Livraison Terminée</string>
    <string name="DeliveryStep">Etape:</string>
    <string name="driverEmail">Livreur Email:</string>
    <string name="PersonToDeliverEmail">Destinataire:</string>
    <string name="setupDriver">Affecter Chauffeur</string>
    <string name="setupItineraire">Affecter Itinéraire </string>
    <string name="validateItineraire">Valider Itineraire</string>
    <string name="selectProducts">Selectionner des produits</string>
</resources>