<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".acitvity.EditProfile">

    <Button
        android:id="@+id/goback_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".acitvity.EditProfile">
    <TextView
        android:id="@+id/textView"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/editProfile" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="true"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="true"
        android:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="true"
        android:hint="@string/phoneNumber">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/truckNumberLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/truck_number_hint"
        android:visibility="gone"> <!-- vu que c'est juste pour les chauffeur la visibilité à 'gone' -->

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/truckNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addressLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/adress"
        android:visibility="gone"> <!-- vu que c'est juste pour les client qui order la visibilité à 'gone' -->

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/adressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"/>

</LinearLayout>
</RelativeLayout>