<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    tools:context=".viewmodel.RegisterViewModel">


    <TextView
        android:id="@+id/textView"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/register" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneNumber"
            android:hint="@string/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/role_dropdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/select_role"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu">

        <AutoCompleteTextView
            android:id="@+id/role_autocomplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:editable="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/truckNumberLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/truck_number_hint"
        android:visibility="gone"> <!-- vu que c'est juste pour les chauffeur la visibilité à 'gone' -->

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/truckNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addressLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/adress"
        android:visibility="gone"> <!-- vu que c'est juste pour les client qui order la visibilité à 'gone' -->

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/adressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btn_register"
        android:text="@string/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:id="@+id/loginNow"
        android:text="Click to login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>