<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".viewmodel.ClientHome">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:orientation="horizontal"
        android:padding="20dp">
        <TextView
            android:id="@+id/user_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Hello World!" />
        <Button
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:layout_marginRight="10dp"/>
        <Button
            android:id="@+id/setData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setData" />
    </LinearLayout>

    <ImageView
        android:id="@+id/image_client_person"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="20dp"

        android:src="@drawable/clientImg" />

    <TextView
        android:id="@+id/textView"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_below="@id/image_client_person"
        android:text="@string/selectAnOption" />
    <!--  bouton pour la sélection des produits -->
    <Button
        android:id="@+id/gotoProductSelection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select Products"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textView"
        android:layout_marginBottom="20dp" />

    <!-- Bouton  pour la gestion des livraisons -->
    <Button
        android:id="@+id/gotoLivraison"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manageDelivery"
        android:layout_below="@id/gotoProductSelection"
        android:layout_centerInParent="true" />
</RelativeLayout>
