<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/bordered_background">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="8dp"
        app:cardCornerRadius="8dp"
        android:layout_margin="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">

            <!-- Delivery Date Section -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deliveryDate"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginRight="20dp"/>

                <TextView
                    android:id="@+id/textViewDeliveryDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginRight="20dp"/>
            </LinearLayout>

            <!-- RecyclerView goes here -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewDeliveryItems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" />

            <!-- Itinerary Button Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                >
                <Button
                    android:id="@+id/ok_delivery_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/validateDelivery"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="10dp"
                    />
                <Button
                    android:id="@+id/cancel_delivery_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/refuseDelivery"
                    android:layout_marginTop="8dp"
                    />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>
